--- a/Assigment-1/index.html
+++ b/Assigment-1/index.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" aria-current="page" href="#">Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="portofolio/index.html">Portofolio</a>
+                <a class="nav-link" href="https://msyaipulanwar.github.io/Assigment-2/">Portofolio</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
